--- a/home/wiki/App/Wiki_types/Wikia.com.html
+++ b/home/wiki/App/Wiki_types/Wikia.com.html
@@ -170,7 +170,12 @@
     </h3>
     <ul>
       <li>
-        Setup Python 2: <a href="https://www.python.org/downloads/" rel="nofollow" class="external free">https://www.python.org/downloads/</a> . For the rest of this walkthrough, we'll assume it's installed at <code>C:\Python2.7</code>
+        Setup Python 2: <a href="https://www.python.org/downloads/" rel="nofollow" class="external free">https://www.python.org/downloads/</a> . For the rest of this walkthrough, we'll assume it's installed at <code>C:\Python2.7</code> 
+        <ul>
+          <li>
+            <b>Note that the dumpgenerator.py script will not work with Python 3</b>
+          </li>
+        </ul>
       </li>
       <li>
         Download the wikiteam project from <a href="https://github.com/WikiTeam/wikiteam" rel="nofollow" class="external free">https://github.com/WikiTeam/wikiteam</a> For the rest of this walkthrough, we'll assume it's downloaded to <code>C:\WikiTeam</code>
