--- a/home/wiki/Help/About.html
+++ b/home/wiki/Help/About.html
@@ -46,7 +46,7 @@
           version:
         </td>
         <td>
-          4.0.3.1702 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log">view changes</a>)</b>
+          4.1.0.1702 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
         </td>
       </tr>
       <tr>
