--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -313,7 +313,7 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_48" title="Help/License/Code">License/Code</a>
+              <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_48" title="Help/License/Code" class="xowa-visited">License/Code</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Help/License/Docs.html" id="xolnki_49" title="Help/License/Docs">License/Docs</a>
