--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -82,27 +82,33 @@
       <span class="mw-headline" id="Disclaimer">Disclaimer</span>
     </h2>
     <p>
-      Please note that this program is beta software. Although it is my best hope that you find this program functional and useful, I make no assurances regarding stability or fitness of purpose. For more details, see <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_2" title="Help/License/Code">Help/License/Code</a>.
+      Please note that this program is beta software. Although it is my best hope that you find this program functional and useful, I make no assurances regarding stability or fitness of purpose. For more details, see <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_2" title="Help/License/Code" class="xowa-visited">Help/License/Code</a>.
     </p>
     <h2>
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v4.0.0.1701 features the following:
+      v4.1.0.1702 features the following:
     </p>
     <ul>
       <li>
-        (PC) Add new <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_3" title="Options">Options</a> system
+        (Wiki) Publish 2017-01 Simple Wikipedia and Chinese wikis.
       </li>
       <li>
-        (PC) Change versioning scheme to semantic versioning
+        (PC) Add new in-app updater. See: <a href="http://xowa.org/home/wiki/App/Setup/Update/In-app.html" id="xolnki_3" title="App/Setup/Update/In-app" class="xowa-visited">App/Setup/Update/In-app</a>
       </li>
       <li>
-        (PC) Fix mass parse performance issues when generating English Wikipedia
+        (PC) Add better support for images in Wikia and other custom wikis
+      </li>
+      <li>
+        (PC) Fix Random not working for HTML databases
+      </li>
+      <li>
+        (PC) Add Creative Commons footer to bottom of page
       </li>
     </ul>
     <p>
-      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_4" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_5" title="Change log">change log</a>.
+      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_4" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_5" title="Change log" class="xowa-visited">change log</a>.
     </p>
     <p>
       For more details about the release schedule, please see <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_6" title="Help/Release schedule">the release schedule</a>.
@@ -236,16 +242,19 @@
     </p>
     <ul>
       <li>
-        v4.0.0 features a new Options system. See <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_17" title="Options">Options</a>
+        v4.1.0 features a new in app update system. See <a href="http://xowa.org/home/wiki/App/Setup/Update/In-app.html" id="xolnki_17" title="App/Setup/Update/In-app" class="xowa-visited">App/Setup/Update/In-app</a>
       </li>
       <li>
-        v3.9.2 features a new Category system. See <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_18" title="App/Category">Category Overview</a>
+        v4.0.0 features a new Options system. See <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_18" title="Options">Options</a>
       </li>
       <li>
-        v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_19" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
+        v3.9.2 features a new Category system. See <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_19" title="App/Category">Category Overview</a>
       </li>
       <li>
-        v3.3.4 features an auto-complete address bar. It also has a faster Search system. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_20" title="App/Search">App/Search</a>
+        v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_20" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
+      </li>
+      <li>
+        v3.3.4 features an auto-complete address bar. It also has a faster Search system. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_21" title="App/Search">App/Search</a>
       </li>
     </ul>
     <dl>
@@ -261,13 +270,13 @@
         v2.8.1 has a language converter dropdown for the Chinese wikis.
       </li>
       <li>
-        v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_21" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
+        v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_22" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
-        v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_22" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_23" title="App/UI/HTML Browser">HTML Browser</a>
+        v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_23" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_24" title="App/UI/HTML Browser">HTML Browser</a>
       </li>
       <li>
-        v2.6.3 uses WebKit for MacOSX. For more info, see <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_24" title="Blog">Blog</a><br>
+        v2.6.3 uses WebKit for MacOSX. For more info, see <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_25" title="Blog">Blog</a><br>
       </li>
     </ul>
     <dl>
@@ -277,13 +286,13 @@
     </dl>
     <ul>
       <li>
-        v2.5.4 has changed online file downloads. Among other things, ImageMagick and Inkscape are no longer required. For more info, see <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_25" title="App/Basics/Files">Files</a>
+        v2.5.4 has changed online file downloads. Among other things, ImageMagick and Inkscape are no longer required. For more info, see <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_26" title="App/Basics/Files">Files</a>
       </li>
       <li>
-        v2.4.2 has improved Search performance and v2.4.4 has added multi-wiki Search. For more info, see <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_26" title="App/Search">App/Search</a>
+        v2.4.2 has improved Search performance and v2.4.4 has added multi-wiki Search. For more info, see <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_27" title="App/Search">App/Search</a>
       </li>
       <li>
-        v2.4.1 has introduced major database layout changes. For more info, see <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_27" title="Dev/Design/Database">Database</a>
+        v2.4.1 has introduced major database layout changes. For more info, see <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_28" title="Dev/Design/Database">Database</a>
       </li>
     </ul>
     <h2>
@@ -303,15 +312,15 @@
             If the font size is too small, right-click and choose Font Increase
           </li>
           <li>
-            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.gui.general.html" id="xolnki_28" title="Special:XowaCfg?grp=xowa.gui.general">Options: Gui - Window</a> and <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.html.css.html" id="xolnki_29" title="Special:XowaCfg?grp=xowa.html.css">Options: HTML - CSS</a>
+            If you need more control over the font, customize it on the <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.gui.general.html" id="xolnki_29" title="Special:XowaCfg?grp=xowa.gui.general">Options: Gui - Window</a> and <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.html.css.html" id="xolnki_30" title="Special:XowaCfg?grp=xowa.html.css">Options: HTML - CSS</a>
           </li>
         </ul>
       </li>
       <li>
-        <b>Find box</b>: Press Ctrl+F on your keyboard. This will show the Find box (in the lower left-hand corner). Type "tips". Notice that the word "Tips" is highlighted above. Note that Alt+P (Previous) and Alt+N (Next) will change search direction. See <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_30" title="App/UI/Find box">Find Box</a> for more info.
+        <b>Find box</b>: Press Ctrl+F on your keyboard. This will show the Find box (in the lower left-hand corner). Type "tips". Notice that the word "Tips" is highlighted above. Note that Alt+P (Previous) and Alt+N (Next) will change search direction. See <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_31" title="App/UI/Find box">Find Box</a> for more info.
       </li>
       <li>
-        <b>Address bar</b>: Press Alt+D or Ctrl+L on your keyboard. This will take you to the Address bar at the top of the screen. Type "s.w:Earth" (no quotes) and press Enter. This will open the Simple Wikipedia page for Earth. See <a href="http://xowa.org/home/wiki/App/UI/Address_bar/Shortcuts.html#Default_shortcuts" id="xolnki_31" title="App/UI/Address bar/Shortcuts">Address bar/Shortcuts</a> for more shortcuts.
+        <b>Address bar</b>: Press Alt+D or Ctrl+L on your keyboard. This will take you to the Address bar at the top of the screen. Type "s.w:Earth" (no quotes) and press Enter. This will open the Simple Wikipedia page for Earth. See <a href="http://xowa.org/home/wiki/App/UI/Address_bar/Shortcuts.html#Default_shortcuts" id="xolnki_32" title="App/UI/Address bar/Shortcuts">Address bar/Shortcuts</a> for more shortcuts.
       </li>
       <li>
         <b>Middle-click in address bar</b>: Copy and paste urls directly into the address bar with the middle mouse button to open the page. For example: 
@@ -332,14 +341,14 @@
       <dd>
         <dl>
           <dd>
-            Now you can copy and paste any Wikipedia url directly into XOWA and its page will open (and all its images will download.) See <a href="http://xowa.org/home/wiki/App/UI/Address_bar/URLs.html" id="xolnki_32" title="App/UI/Address bar/URLs">Address_bar/URLs</a> for more info
+            Now you can copy and paste any Wikipedia url directly into XOWA and its page will open (and all its images will download.) See <a href="http://xowa.org/home/wiki/App/UI/Address_bar/URLs.html" id="xolnki_33" title="App/UI/Address bar/URLs">Address_bar/URLs</a> for more info
           </dd>
         </dl>
       </dd>
     </dl>
     <ul>
       <li>
-        <b>Middle-click on link</b>: Open a tab in a new link by middle-clicking on it. Try middle-clicking the following: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_33" title="Options">Options</a>
+        <b>Middle-click on link</b>: Open a tab in a new link by middle-clicking on it. Try middle-clicking the following: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_34" title="Options">Options</a>
       </li>
       <li>
         <b>Right-click</b>: Right click on an image and click save as file
@@ -350,7 +359,7 @@
     </h2>
     <ul>
       <li>
-        <b>Wikidata</b>: If you're seeing {{#property}} in your wikis you should also set up Wikidata. See <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikidata.html" id="xolnki_34" title="App/Wiki types/Wikidata">App/Wiki_types/Wikidata</a>
+        <b>Wikidata</b>: If you're seeing {{#property}} in your wikis you should also set up Wikidata. See <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikidata.html" id="xolnki_35" title="App/Wiki types/Wikidata">App/Wiki_types/Wikidata</a>
       </li>
     </ul>
     <h2>
@@ -359,7 +368,7 @@
     <table class="wikitable">
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_35" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
+          <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_36" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
         </td>
         <td>
           Download an Android-ready wiki with images from archive.org
@@ -367,7 +376,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_36" title="Dashboard/Import/Online">Import Online</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_37" title="Dashboard/Import/Online">Import Online</a>
         </td>
         <td>
           Import a wiki from a list of 829 known Wikimedia Foundation wikis
@@ -375,7 +384,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_37" title="Dashboard/Import/Offline" class="xowa-visited">Import Offline</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_38" title="Dashboard/Import/Offline" class="xowa-visited">Import Offline</a>
         </td>
         <td>
           Import a wiki through a dump; import also through script; also upgrade category to version 2
@@ -383,7 +392,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_38" title="Dashboard/Image databases" class="xowa-visited">Image databases</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_39" title="Dashboard/Image databases" class="xowa-visited">Image databases</a>
         </td>
         <td>
           Download image databases for your wiki
@@ -391,7 +400,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_39" title="Dashboard/Wiki maintenance">Wiki Maintenance</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_40" title="Dashboard/Wiki maintenance">Wiki Maintenance</a>
         </td>
         <td>
           Update your wikis if they are outdated
@@ -399,7 +408,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/FAQs.html" id="xolnki_40" title="Help/FAQs">FAQs</a>
+          <a href="http://xowa.org/home/wiki/Help/FAQs.html" id="xolnki_41" title="Help/FAQs">FAQs</a>
         </td>
         <td>
           View questions asked by other users
@@ -407,7 +416,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_41" title="Help/Contents" class="xowa-visited">Contents</a>
+          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_42" title="Help/Contents" class="xowa-visited">Contents</a>
         </td>
         <td>
           View all help topics
@@ -415,7 +424,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_42" title="Options">Options</a>
+          <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_43" title="Options">Options</a>
         </td>
         <td>
           Configure XOWA options
@@ -423,7 +432,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_43" title="Change log">Change log</a>
+          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_44" title="Change log" class="xowa-visited">Change log</a>
         </td>
         <td>
           View changes for each XOWA release
@@ -431,7 +440,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_44" title="Diagnostics">Diagnostics</a>
+          <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_45" title="Diagnostics">Diagnostics</a>
         </td>
         <td>
           Run test pages to make sure that XOWA works on your system.
