--- a/index.html
+++ b/index.html
@@ -110,7 +110,13 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
-  <b>2017-01-02</b> 2016-12 English Wikipedia release. Also, 2016-12 Italian and Swahili wikis<br/>
+  <b>2017-01-27</b> 2017-01 Chinese wikis released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_zhwiki_latest" class="external text" rel="nofollow">Chinese Wikis</a>
+    </li>
+  </ul>
+
+  <b>2017-01-02</b> 2016-12 English Wikipedia released. Also, 2016-12 Italian and Swahili wikis<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_nlwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
     </li>
