--- a/demo/wikimedia.html
+++ b/demo/wikimedia.html
@@ -61,10 +61,7 @@
   </style>
   <script src="wikimedia.js" type='text/javascript'></script>
 </head>
-<body>
-  Please wait. Generating.
+<body onload="wm.category.run();">
+  Please wait. Generating...
 </body>
-<script>
-  wm.category.run();
-</script>
 </html>
