handle missing category query arg

--- a/demo/wikimedia.html
+++ b/demo/wikimedia.html
@@ -68,8 +68,8 @@
 <body onload="wm.category.run();">
   Example urls:
   <ul>
-    <li><a href='http://xowa.org/wikimedia.html?domain=en.wikipedia.org&category=Earth'>http://xowa.org/wikimedia.html?domain=en.wikipedia.org&category=Earth</a></li>
-    <li><a href='http://xowa.org/wikimedia.html?domain=en.wikipedia.org&category=Coffee'>http://xowa.org/wikimedia.html?domain=en.wikipedia.org&category=Coffee</a></li>
+    <li><a href='http://xowa.org/demo/wikimedia.html?domain=en.wikipedia.org&category=Earth'>http://xowa.org/demo/wikimedia.html?domain=en.wikipedia.org&category=Earth</a></li>
+    <li><a href='http://xowa.org/demo/wikimedia.html?domain=en.wikipedia.org&category=Coffee'>http://xowa.org/demo/wikimedia.html?domain=en.wikipedia.org&category=Coffee</a></li>
   </ul>
 </body>
 </html>
