--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -434,7 +434,7 @@
         (change) Server: Fix for Windows path {contributed by Mattze96}.
       </li>
       <li>
-        (doc) Import: Instructions for importing wikia.com wikis {contributed by Nocte Draconis}. See: <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_6" title="App/Wiki types/Wikia.com">App/Wiki_types/Wikia.com</a>
+        (doc) Import: Instructions for importing wikia.com wikis {contributed by Nocte Draconis}. See: <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_6" title="App/Wiki types/Wikia.com" class="xowa-visited">App/Wiki_types/Wikia.com</a>
       </li>
     </ul>
     <h2>
