--- a/home/wiki/Change_log/2014.html
+++ b/home/wiki/Change_log/2014.html
@@ -1341,7 +1341,7 @@
         Module.Popups: Do not omit namespace for anchor popups (affects popups showing text from wrong page when link was to non-mainspace page). See: <a href="https://en.wikipedia.org/wiki/Project:Sandbox" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Project:Sandbox</a>
       </li>
       <li>
-        Gui: Do not open external link in xowa if link ends in .html; EX:http://jtidy.sourceforge.net/license.html. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_10" title="Help/About">Help/About</a>
+        Gui: Do not open external link in xowa if link ends in .html; EX:http://jtidy.sourceforge.net/license.html. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_10" title="Help/About" class="xowa-visited">Help/About</a>
       </li>
       <li>
         Html: Show caption text in title (affects tooltips missing caption text); EX:"a [[b]]" -&gt; title="a b" x&gt; "a ". See: <a href="https://en.wikipedia.org/wiki/Earth" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Earth</a>
@@ -2727,7 +2727,7 @@
     </p>
     <ul>
       <li>
-        Doc: Update license info for third-party XOWA components. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_63" title="Help/About">Help/About</a>
+        Doc: Update license info for third-party XOWA components. See: <a href="http://xowa.org/home/wiki/Help/About.html" id="xolnki_63" title="Help/About" class="xowa-visited">Help/About</a>
       </li>
     </ul>
     <p>
