--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -152,6 +152,41 @@
       </tr>
       <tr>
         <td>
+          de.wikisource.org
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2016-04-07
+        </td>
+        <td class='cell_center'>
+          2015-08-06
+        </td>
+        <td class='cell_center'>
+          Dump complete
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("de.wikisource.org")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("de.wikisource.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("de.wikisource.org")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
           dungeons.wikia.com
         </td>
         <td class='cell_center'>
@@ -192,7 +227,7 @@
           n
         </td>
         <td class='cell_center'>
-          2017-02-01
+          2017-03-08
         </td>
         <td class='cell_center'>
           2015-08-05
@@ -217,111 +252,6 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikipedia.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          fr.wikipedia.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2017-02-01
-        </td>
-        <td class='cell_center'>
-          2015-08-06
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikipedia.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikipedia.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikipedia.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          gu.wikipedia.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2017-02-20
-        </td>
-        <td class='cell_center'>
-          2015-08-05
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("gu.wikipedia.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("gu.wikipedia.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("gu.wikipedia.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          gu.wiktionary.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2017-02-01
-        </td>
-        <td class='cell_center'>
-          2015-08-06
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("gu.wiktionary.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("gu.wiktionary.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("gu.wiktionary.org")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -366,7 +296,7 @@
           n
         </td>
         <td class='cell_center'>
-          2017-03-02
+          2017-03-01
         </td>
         <td class='cell_center'>
           2015-08-06
