--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -161,7 +161,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_23" title="App/Wiki types/Wikia.com">Wikia.com and other MediaWiki wikis</a>
+              <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_23" title="App/Wiki types/Wikia.com" class="xowa-visited">Wikia.com and other MediaWiki wikis</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Personal_wikis.html" id="xolnki_24" title="App/Personal wikis">Personal wikis</a>
