--- a/home/wiki/Help/Donate.html
+++ b/home/wiki/Help/Donate.html
@@ -54,6 +54,18 @@
     <p>
       Thank you!
     </p>
+    <h2>
+      <span class="mw-headline" id="Sponsor_List">Sponsor List</span>
+    </h2>
+    <div align='center'>
+      <div style=''>
+        <p>
+          anonymous_e6e2c3ed-4f2b-4c61-9898-1be435464ec8<br>
+          anonymous4<br>
+          Anselm<br>
+        </p>
+      </div>
+    </div>
   
     </div>
   </div>
