--- a/home/wiki/Options/Files.html
+++ b/home/wiki/Options/Files.html
@@ -112,6 +112,9 @@
           <option value='xowa.gui.nightmode'>
             Gui - Night mode
           </option>
+          <option value='xowa.addon.search.fulltext'>
+            Addon - Full text search
+          </option>
         </select>
       </div>
       <div id='cfg_grps'>
@@ -281,17 +284,17 @@
           </div>
           <div id='xowa.files.cache.info__undo' data-xocfg-type='memo' class='xocfg_itm_delete xocfg_itm_hide'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.files.cache.info")' title="reset to &quot;cache folder: C:\xowa\file
-            space used: 22.060 MB
-            file count: 1725
-            oldest file: 2017-03-02 22:40:00
+            space used: 38.042 MB
+            file count: 2843
+            oldest file: 2017-03-10 21:59:24
             &quot;">&nbsp;</span>
           </div>
           <div class='xocfg_itm_data'>
 <textarea id="xowa.files.cache.info" data-xocfg-key="xowa.files.cache.info" data-xocfg-type="memo" accesskey="d" class="xocfg_data__memo xocfg_data__readonly" readonly="true">
 cache folder: C:\xowa\file
-space used: 22.060 MB
-file count: 1725
-oldest file: 2017-03-02 22:40:00
+space used: 38.042 MB
+file count: 2843
+oldest file: 2017-03-10 21:59:24
 </textarea>
           </div><input type='hidden' id='xowa.files.cache.info__key_box' value='xowa.files.cache.info'> <input type='hidden' id='xowa.files.cache.info__ctx_box' value='app'>
         </div>
