--- a/home/wiki/Options/Wikibase.html
+++ b/home/wiki/Options/Wikibase.html
@@ -112,6 +112,9 @@
           <option value='xowa.gui.nightmode'>
             Gui - Night mode
           </option>
+          <option value='xowa.addon.search.fulltext'>
+            Addon - Full text search
+          </option>
         </select>
       </div>
       <div id='cfg_grps'>
